--- a/ui/app/styles/main.css
+++ b/ui/app/styles/main.css
@@ -88,6 +88,18 @@ background-color: #eee;
   outline: none;
 }
 
+.apollo-delimiter-right {
+    margin-right: 30px;
+    margin-left: 20px;
+}
+
+.apollo-form-control {
+    border-radius: 4px;
+    height: 34px;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+}
+
 .apollo-form-headline {
 
   font-weight: bold;
