--- a/ui/app/views/deployments/new.html
+++ b/ui/app/views/deployments/new.html
@@ -87,11 +87,9 @@
             <div class="panel panel-default">
                 <div class="panel-heading apollo-form-headline">
                     <div class="row">
-                        <div class="col-sm-9">
+                        <div class="col-sm-12">
                             Select version
-                        </div>
-                        <div class="col-sm-3 pull-right">
-                            <button class="btn btn-outline btn-primary" data-toggle="modal" data-target="#latest-commit-from-branch">
+                            <button class="btn btn-outline btn-primary pull-right" data-toggle="modal" data-target="#latest-commit-from-branch">
                                 Deploy latest commit from branch
                             </button>
                         </div>
