--- a/ui/app/views/service/configure.html
+++ b/ui/app/views/service/configure.html
@@ -58,6 +58,10 @@
                             <ui-codemirror ui-codemirror-opts="editorOptions" ng-model="selectedService.serviceYaml" name="serviceYaml"></ui-codemirror>
                         </div>
                         <div class="form-group">
+                            <label>Is part of group</label>
+                            <input type="checkbox" ng-model="selectedService.isPartOfGroup" name="isPartOfGroup">
+                        </div>
+                        <div class="form-group">
                             <input ng-disabled="buttonDisabled || serviceForm.$invalid" class="btn btn-success" type="submit" value="Save">
                         </div>
                     </div>
